--- a/sisterhood.html
+++ b/sisterhood.html
@@ -19,14 +19,6 @@
   <!-- Custom styles for this template -->
   <link href="sisterhood.css" rel="stylesheet">
 
-
-  <!-- Social Media Icons-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-  <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
-
   <style>
   /* Make the image fully responsive */
   .carousel-inner img {
@@ -34,15 +26,10 @@
     height: 100%;
   }
 </style>
-</head>
-
-
-<body>
-
   <!-- Navigation -->
   <div id="menu" class="navbar navbar-default navbar-custom">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#FEA17E">
-      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+      <div id="left-nav" class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="aboutus.html">About Us</a>
@@ -66,7 +53,7 @@
       </div>
 
         
-      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+      <div class="navbar-collapse collapse w-100 order-2 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="leadership.html">Leadership</a>
@@ -81,15 +68,16 @@
       </div>
     </nav>
   </div>
+</head>
+
+
+<body>
 
 
   <!-- BANNER IMAGE-->
 
   <div class="banner">
-    <img class="banner-image" src="./images/events/spiritnight.jpg">
-    <div class="banner-text">
-      Sisterhood
-    </div>
+    <img class="banner-image" src="./images/index/sororitylife.jpg">
   </div>
 
   <!-- Page Content -->
@@ -292,9 +280,12 @@
 
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js">
-</script>
+
+<!-- Social Media Icons-->
+<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
 <script type="text/javascript" src="slick/slick.min.js"></script>
 
 </body>
