--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 
 
   <!-- Navigation -->
-  <div id="menu" class="navbar navbar-default navbar-custom">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#FFC2A5">
+    <nav class="navbar navbar-expand-md navbar-default navbar-dark sticky-top" style="background-color:#FFC2A5">
       <div id="left-nav" class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
@@ -69,7 +68,6 @@
         </ul>
       </div>
     </nav>
-  </div>
 </head>
 
 
