--- a/sisterhood.html
+++ b/sisterhood.html
@@ -77,7 +77,7 @@
   <!-- BANNER IMAGE-->
 
   <div class="banner">
-    <img class="banner-image" src="./images/index/sororitylife.jpg">
+    <img class="banner-image" src="./images/index/sororitylifeCut.jpg">
   </div>
 
   <!-- Page Content -->
@@ -175,8 +175,15 @@
       </div>
     </div>
     <div class="col-md-4">
+        <div id="stage">
+            <a href="./images/sisterhood/dd1.jpeg" title="Sun God '17"><img src="./images/sisterhood/dd1.jpeg" width="360" height="270"></a>
+            <a href="./images/sisterhood/dd2.png" title="Sun God '17"><img src="./images/sisterhood/dd2.png" width="360" height="270"></a>
+            <a href="./images/sisterhood/dd3.jpg" title="Sun God '17"><img src="./images/sisterhood/dd3.jpg" width="360" height="270"></a>
+            <a href="./images/sisterhood/dd4.jpg" title="Sun God '17"><img src="./images/sisterhood/dd4.jpg" width="360" height="270"></a>
+        </div>
+<!--
       <div id="demo" class="carousel slide" data-ride="carousel">
-        <!-- The slideshow -->
+         The slideshow 
         <div class="carousel-inner polaroid">
           <div class="carousel-item active">
             <p>Sun God '17</p>
@@ -199,6 +206,7 @@
           </div>
         </div>
       </div>
+-->
     </div>
   </div>
 </div>
@@ -287,6 +295,24 @@
 <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
 <script type="text/javascript" src="slick/slick.min.js"></script>
+
+<script type="text/javascript">
+
+  // Original JavaScript code by Chirp Internet: www.chirp.com.au
+  // Please acknowledge use of this code by including this header.
+
+  window.addEventListener("DOMContentLoaded", function(e) {
+
+    var stage = document.getElementById("stage");
+    var fadeComplete = function(e) { stage.appendChild(arr[0]); };
+    var arr = stage.getElementsByTagName("a");
+    for(var i=0; i < arr.length; i++) {
+      arr[i].addEventListener("animationend", fadeComplete, false);
+    }
+
+  }, false);
+
+</script>
 
 </body>
 
